    * fix: the 'startup.dataDirectory' config option was being ignored
    * fix: recognizing the proper private ip ranges of the 172.* block
    * fix: missing 'is default' option from config sort ordering
    * fix (4/4/11, r24562): hidden service parsing issue when there's multiple spaces in the HiddenServicePort opition (caught by Nicolas Pouillard)

1/7/11 - version 1.4.1 (r24054)
Platform specific enhancements including BSD compatibility and vastly improved performance on Linux.

    * added: querying the proc contents when able for tor resource and connection samplings to *greatly* reduce arm's resource usage (many thanks to psutil)
    * added: vastly improved BSD compatibility, thanks to patches by Fabian Keil
          o pid resolution via pgrep (all platforms) and sockstat (bsd only)
          o connection resolution via sockstat (all platforms) and procstat (bsd only)
          o autodetecting the path prefix for FreeBSD jails
    * added: displaying summaries of the options on the configuration panel (idea by Sebastian)
    * added: arm cpu usage to the header panel and logs (with an estimate for system call usages)
    * added: testing script for checking connection resolution performance, connection dumps, and the glyph demo
    * added: option to dump arm debug logs (better failsafe option)
    * change: incrementing the uptime field of the header panel each second
    * change: centralizing arm resources in ~/.arm (suggested by Sebastian and also thanks to feedback from rransom)
    * change: using exponential backoff of ps/proc resource resolutions when calls fail or tor isn't running
    * change: reordered resolvers by order of performance
    * change: when tor's man page is unavailable falling back to descriptions provided with arm (often the case with tbb)
    * change: dropping support for graphing of custom ps attributes (feature was never used, kinda pointless, and incompatible with the proc enhancement)